--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@svitejs/vite-plugin-svelte": "^0.11.1",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
     "sass": "^1.32.8",
     "svelte": "^3.35.0",
     "svelte-check": "^2.4.6",
     "svelte-preprocess": "^4.6.9",
     "typescript": "^4.2.3",
-    "vite": "2.1.3"
+    "vite": "^2.9.0"
   },
   "dependencies": {
     "popmotion": "^11.0.3",
     "sirv-cli": "^2.0.0",
     "svelte-particles": "^2.0.6",
-    "tsparticles": "^2.0.6"
+    "tsparticles": "^2.0.6",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
+    "sass": "^1.32.8",
+    "svelte": "^3.35.0",
+    "svelte-check": "^2.4.6",
+    "svelte-preprocess": "^4.6.9",
+    "typescript": "^4.2.3",
+    "vite": "^2.9.0"
   }
 }
